add pengertian, sejarah, struktur kepengurusan, dan BUMN yang terlibat

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             color: #333;
             margin-bottom: 20px;
         }
+        h3 {
+            color: #333;
+            margin-bottom: 10px;
+        }
         #result {
             font-size: 1.2em;
             padding: 15px;
@@ -34,6 +38,10 @@
             color: #666;
             margin-bottom: 20px;
         }
+        p {
+            text-align: left;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -41,6 +49,100 @@
         <h1>DANANTARA</h1>
         <div class="fixed-date">Sejak 24 Februari 2025 10:00 WIB</div>
         <div id="result"></div>
+    </div>
+    <div class="container">
+        <h3>Pengertian</h3>
+        <p>
+            Badan Pengelola Investasi Daya Anagata Nusantara (Danantara Indonesia) adalah 
+            badan pengelola investasi strategis yang mengonsolidasikan dan mengoptimalkan 
+            investasi pemerintah untuk mendukung pertumbuhan ekonomi nasional.
+        </p>
+        <p>
+            Nama "Daya Anagata Nusantara" diberikan langsung oleh Presiden Prabowo Subianto:
+        </p>
+        <p>
+            • "Daya" berarti energi<br>
+            • "Anagata" berarti masa depan<br>
+            • "Nusantara" merujuk pada Negara Kesatuan Republik Indonesia
+        </p>
+        <p>
+            Secara keseluruhan mencerminkan kekuatan dan potensi masa depan Indonesia.
+        </p>
+        <h3>Sejarah</h3>
+        <p>
+            Sejak 22 Oktober 2024, Danantara dipimpin oleh seorang ketua, Muliaman Darmansyah Hadad. Pada 25 Oktober 2024, Presiden Prabowo Subianto menunjuk 5 anggota dewan pengawas.
+        </p>
+        <p>
+            Hingga 6 November 2024, peluncuran Danantara masih menunggu Presiden Prabowo Subianto karena ia akan melakukan kunjungan kepresidenan dan revisi hukum terhadap dokumen-dokumen yang menyusunnya.
+        </p>
+        <p>
+            Pada tanggal 24 Februari 2025, Presiden Prabowo Subianto resmi meluncurkan Danantara, ditandai dengan ditandatanganinya undang-undang nomor 1 tahun 2025 tentang perubahan ketiga atas undang-undang Nomor 19 Tahun 2003 tentang Badan Usaha Milik Negara dan peraturan Pemerintah Nomor 10 tahun 2025 tentang organisasi dan tata kelola badan pengelola investasi Daya Anagata Nusantara (Danantara). Kemudian dilanjutkan dengan ditandatanganinya Keputusan Presiden Nomor 30 tahun 2025 tentang pengangkatan dewan pengawas dan badan pelaksana Badan Pengelola Investasi dan Daya Anagata Nusantara.
+        </p>
+        <h3>Struktur Kepengurusan</h3>
+        <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; text-align: left; border-collapse: collapse;">
+            <thead>
+            <tr>
+                <th>Jabatan</th>
+                <th>Nama</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Pembina dan Penanggung Jawab</td>
+                <td>Presiden Indonesia, Prabowo Subianto Djojohadikusumo</td>
+            </tr>
+            <tr>
+                <td>Dewan Penasihat</td>
+                <td>Presiden ke-6 Indonesia, Susilo Bambang Yudhoyono</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Presiden ke-7 Indonesia, Joko Widodo</td>
+            </tr>
+            <tr>
+                <td>Dewan Pengawas</td>
+                <td>Ketua: Erick Thohir</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Wakil Ketua: Muliaman Darmansyah Hadad</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Anggota: Sri Mulyani Indrawati</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Anggota: Sir Anthony Charles Lynton Blair</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Anggota: Raymond Thomas Dalio</td>
+            </tr>
+            <tr>
+                <td>Badan Pelaksana</td>
+                <td>Kepala Badan Pelaksana/Chief Executive Officer (CEO): Rosan Perkasa Roeslani</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Holding Investasi/Chief Investment Officer (CIO): Pandu Patria Sjahrir</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Holding Operasional/Chief Operating Officer (COO): Dony Oskaria</td>
+            </tr>
+            </tbody>
+        </table>
+        <h3>BUMN dibawah Danantara</h3>
+        <ul style="text-align: left; list-style-type: disc; padding-left: 20px;">
+            <li>Bank Mandiri</li>
+            <li>Bank Rakyat Indonesia</li>
+            <li>Perusahaan Listrik Negara</li>
+            <li>Pertamina</li>
+            <li>Bank Negara Indonesia</li>
+            <li>Telkom Indonesia</li>
+            <li>MIND ID</li>
+        </ul>
     </div>
 
     <script>
