perubahan bentuk struktur kepengurusan

--- a/index.html
+++ b/index.html
@@ -79,60 +79,45 @@
             Pada tanggal 24 Februari 2025, Presiden Prabowo Subianto resmi meluncurkan Danantara, ditandai dengan ditandatanganinya undang-undang nomor 1 tahun 2025 tentang perubahan ketiga atas undang-undang Nomor 19 Tahun 2003 tentang Badan Usaha Milik Negara dan peraturan Pemerintah Nomor 10 tahun 2025 tentang organisasi dan tata kelola badan pengelola investasi Daya Anagata Nusantara (Danantara). Kemudian dilanjutkan dengan ditandatanganinya Keputusan Presiden Nomor 30 tahun 2025 tentang pengangkatan dewan pengawas dan badan pelaksana Badan Pengelola Investasi dan Daya Anagata Nusantara.
         </p>
         <h3>Struktur Kepengurusan</h3>
-        <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; text-align: left; border-collapse: collapse;">
-            <thead>
-            <tr>
-                <th>Jabatan</th>
-                <th>Nama</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Pembina dan Penanggung Jawab</td>
-                <td>Presiden Indonesia, Prabowo Subianto Djojohadikusumo</td>
-            </tr>
-            <tr>
-                <td>Dewan Penasihat</td>
-                <td>Presiden ke-6 Indonesia, Susilo Bambang Yudhoyono</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Presiden ke-7 Indonesia, Joko Widodo</td>
-            </tr>
-            <tr>
-                <td>Dewan Pengawas</td>
-                <td>Ketua: Erick Thohir</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Wakil Ketua: Muliaman Darmansyah Hadad</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Anggota: Sri Mulyani Indrawati</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Anggota: Sir Anthony Charles Lynton Blair</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Anggota: Raymond Thomas Dalio</td>
-            </tr>
-            <tr>
-                <td>Badan Pelaksana</td>
-                <td>Kepala Badan Pelaksana/Chief Executive Officer (CEO): Rosan Perkasa Roeslani</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Holding Investasi/Chief Investment Officer (CIO): Pandu Patria Sjahrir</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>Holding Operasional/Chief Operating Officer (COO): Dony Oskaria</td>
-            </tr>
-            </tbody>
-        </table>
+        <div style="text-align: left; padding: 10px;">
+            <ul style="list-style-type: none; padding-left: 0;">
+            <li>
+                <strong>Pembina dan Penanggung Jawab:</strong>
+                <ul style="list-style-type: none; padding-left: 20px;">
+                <li>Presiden Indonesia, Prabowo Subianto Djojohadikusumo</li>
+                </ul>
+            </li>
+            <li style="margin-top: 15px;">
+                <strong>Dewan Penasihat:</strong>
+                <ul style="list-style-type: none; padding-left: 20px;">
+                <li>Presiden ke-6 Indonesia, Susilo Bambang Yudhoyono</li>
+                <li>Presiden ke-7 Indonesia, Joko Widodo</li>
+                </ul>
+            </li>
+            <li style="margin-top: 15px;">
+                <strong>Dewan Pengawas:</strong>
+                <ul style="list-style-type: none; padding-left: 20px;"></ul>
+                <li>Ketua: Erick Thohir</li>
+                <li>Wakil Ketua: Muliaman Darmansyah Hadad</li>
+                <li>Anggota:
+                    <ul style="list-style-type: none; padding-left: 20px;">
+                    <li>Sri Mulyani Indrawati</li>
+                    <li>Sir Anthony Charles Lynton Blair</li>
+                    <li>Raymond Thomas Dalio</li>
+                    </ul>
+                </li>
+                </ul>
+            </li>
+            <li style="margin-top: 15px;">
+                <strong>Badan Pelaksana:</strong>
+                <ul style="list-style-type: none; padding-left: 20px;">
+                <li>Kepala Badan Pelaksana/CEO: Rosan Perkasa Roeslani</li>
+                <li>Holding Investasi/CIO: Pandu Patria Sjahrir</li>
+                <li>Holding Operasional/COO: Dony Oskaria</li>
+                </ul>
+            </li>
+            </ul>
+        </div>
         <h3>BUMN dibawah Danantara</h3>
         <ul style="text-align: left; list-style-type: disc; padding-left: 20px;">
             <li>Bank Mandiri</li>
