perbaikan sesuai dengan web resminya

--- a/index.html
+++ b/index.html
@@ -46,78 +46,61 @@
 </head>
 <body>
     <div class="container">
-        <h1>DANANTARA</h1>
-        <div class="fixed-date">Sejak 24 Februari 2025 10:00 WIB</div>
+        <h1>
+            <a class="link" href="https://www.danantaraindonesia.com/" target="_blank">
+                DANANTARA
+              </a></h1>
+        <div class="fixed-date"><b>Sejak 24 Februari 2025 10:00 WIB</b></div>
         <div id="result"></div>
     </div>
     <div class="container">
-        <h3>Pengertian</h3>
-        <p>
-            Badan Pengelola Investasi Daya Anagata Nusantara (Danantara Indonesia) adalah 
-            badan pengelola investasi strategis yang mengonsolidasikan dan mengoptimalkan 
-            investasi pemerintah untuk mendukung pertumbuhan ekonomi nasional.
+        <h3>Tentang</h3>
+<p style="margin: 20px;">
+    <strong>Danantara Indonesia</strong><br>
+    (Badan Pengelola Investasi Daya Anagata Nusantara)
+</p>
+
+<p style="text-align: justify; margin-bottom: 15px;">
+    Danantara Indonesia adalah badan pengelola investasi strategis yang mengonsolidasikan 
+    dan mengoptimalkan investasi pemerintah untuk mendukung pertumbuhan ekonomi nasional. 
+    Nama <u>"Daya Anagata Nusantara"</u> diberikan langsung oleh Presiden Prabowo Subianto. 
+    <u>"Daya"</u> berarti energi, <u>"Anagata"</u> berarti masa depan, dan <u>"Nusantara"</u> merujuk pada 
+    Negara Kesatuan Republik Indonesia, yang secara keseluruhan mencerminkan kekuatan 
+    dan potensi masa depan Indonesia.
+</p>
+
+<p style="text-align: justify;">
+    Untuk mencapai tujuan strategisnya, Danantara Indonesia berkomitmen untuk mendorong 
+    transformasi ekonomi dengan pendekatan profesional dan menerapkan <i>good governance.</i> 
+    Danantara Indonesia berkomitmen untuk meningkatkan efisiensi aset, menarik investasi 
+    global, dan memperkuat daya saing Indonesia di sektor strategis, <mark><B><I>SEHINGGA MENCIPTAKAN 
+        KEMAKMURAN YANG MERATA BAGI SELURUH RAKYAT INDONESIA.</I></B></mark>
+</p>
+        <h3>Visi</h3>
+        <p style="text-align: justify; margin-bottom: 20px;">
+            Sebagai pengelola investasi terkemuka, di mana BUMN strategis akan menjadi <I>enabler</I> 
+            penempatan investasinya, Danantara Indonesia mendorong transformasi ekonomi Indonesia 
+            dengan menumbuhkan badan <i>Sovereign Wealth Fund</i> berskala dunia, mendukung pembangunan 
+            nasional dan <mark><B><I>MENCIPTAKAN KEMAKMURAN BAGI SELURUH RAKYAT INDONESIA.</I></B></mark>
         </p>
-        <p>
-            Nama "Daya Anagata Nusantara" diberikan langsung oleh Presiden Prabowo Subianto:
-        </p>
-        <p>
-            • "Daya" berarti energi<br>
-            • "Anagata" berarti masa depan<br>
-            • "Nusantara" merujuk pada Negara Kesatuan Republik Indonesia
-        </p>
-        <p>
-            Secara keseluruhan mencerminkan kekuatan dan potensi masa depan Indonesia.
-        </p>
-        <h3>Sejarah</h3>
-        <p>
-            Sejak 22 Oktober 2024, Danantara dipimpin oleh seorang ketua, Muliaman Darmansyah Hadad. Pada 25 Oktober 2024, Presiden Prabowo Subianto menunjuk 5 anggota dewan pengawas.
-        </p>
-        <p>
-            Hingga 6 November 2024, peluncuran Danantara masih menunggu Presiden Prabowo Subianto karena ia akan melakukan kunjungan kepresidenan dan revisi hukum terhadap dokumen-dokumen yang menyusunnya.
-        </p>
-        <p>
-            Pada tanggal 24 Februari 2025, Presiden Prabowo Subianto resmi meluncurkan Danantara, ditandai dengan ditandatanganinya undang-undang nomor 1 tahun 2025 tentang perubahan ketiga atas undang-undang Nomor 19 Tahun 2003 tentang Badan Usaha Milik Negara dan peraturan Pemerintah Nomor 10 tahun 2025 tentang organisasi dan tata kelola badan pengelola investasi Daya Anagata Nusantara (Danantara). Kemudian dilanjutkan dengan ditandatanganinya Keputusan Presiden Nomor 30 tahun 2025 tentang pengangkatan dewan pengawas dan badan pelaksana Badan Pengelola Investasi dan Daya Anagata Nusantara.
-        </p>
-        <h3>Struktur Kepengurusan</h3>
-        <div style="text-align: left; padding: 10px;">
-            <ul style="list-style-type: none; padding-left: 0;">
-            <li>
-                <strong>Pembina dan Penanggung Jawab:</strong>
-                <ul style="list-style-type: none; padding-left: 20px;">
-                <li>Presiden Indonesia, Prabowo Subianto Djojohadikusumo</li>
-                </ul>
+        <h3>Misi</h3>
+        <ol style="text-align: justify; padding-left: 20px; margin-bottom: 20px;"></ol>
+            <li style="margin-bottom: 10px;">
+            Mengelola kekayaan negara secara profesional, transparan, dan berkelanjutan sesuai dengan prinsip <i>good governance</i> untuk mendorong kesejahteraan rakyat, sebagaimana diamanatkan dalam <b>Pasal 33 Ayat 3 UUD 1945</b> dan misi Asta Cita.
             </li>
-            <li style="margin-top: 15px;">
-                <strong>Dewan Penasihat:</strong>
-                <ul style="list-style-type: none; padding-left: 20px;">
-                <li>Presiden ke-6 Indonesia, Susilo Bambang Yudhoyono</li>
-                <li>Presiden ke-7 Indonesia, Joko Widodo</li>
-                </ul>
+            <li style="margin-bottom: 10px;">
+            Mengoptimalkan dan mengelola aset BUMN untuk menciptakan nilai tambah ekonomi yang signifikan.
             </li>
-            <li style="margin-top: 15px;">
-                <strong>Dewan Pengawas:</strong>
-                <ul style="list-style-type: none; padding-left: 20px;"></ul>
-                <li>Ketua: Erick Thohir</li>
-                <li>Wakil Ketua: Muliaman Darmansyah Hadad</li>
-                <li>Anggota:
-                    <ul style="list-style-type: none; padding-left: 20px;">
-                    <li>Sri Mulyani Indrawati</li>
-                    <li>Sir Anthony Charles Lynton Blair</li>
-                    <li>Raymond Thomas Dalio</li>
-                    </ul>
-                </li>
-                </ul>
+            <li style="margin-bottom: 10px;">
+            Menjadi katalisator pertumbuhan ekonomi nasional melalui investasi strategis di sektor prioritas yang mendorong daya saing global.
             </li>
-            <li style="margin-top: 15px;">
-                <strong>Badan Pelaksana:</strong>
-                <ul style="list-style-type: none; padding-left: 20px;">
-                <li>Kepala Badan Pelaksana/CEO: Rosan Perkasa Roeslani</li>
-                <li>Holding Investasi/CIO: Pandu Patria Sjahrir</li>
-                <li>Holding Operasional/COO: Dony Oskaria</li>
-                </ul>
+            <li style="margin-bottom: 10px;">
+            Menarik dan mengakselerasi investasi domestik maupun internasional dengan membangun kemitraan strategis guna mendukung pembangunan nasional yang inklusif dan berkelanjutan.
             </li>
-            </ul>
-        </div>
+            <li style="margin-bottom: 10px;">
+            Membangun institusi <i>Sovereign Wealth Fund</i> yang mandiri dan unggul, dengan tata kelola keuangan yang sehat serta berorientasi pada keberlanjutan jangka panjang.
+            </li>
+        </ol>
         <h3>BUMN dibawah Danantara</h3>
         <ul style="text-align: left; list-style-type: disc; padding-left: 20px;">
             <li>Bank Mandiri</li>
